infrastructure/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-demo
  labels:
    app: prometheus-demo
spec:
  type: NodePort
  selector:
    app: prometheus-demo
  ports:
    - port: 8080
      targetPort: 3000
      nodePort: 30080
      name: web
